--- a/home.html
+++ b/home.html
@@ -36,11 +36,14 @@
       <div class="well sidebar-nav">
       <ul class = "nav nav-list"
         <li class="nav-header">Navigate</li>
-          <li class="active">
-          <a href="home.html">Home</a>
+          <li class="active"><a href="home.html">Home</a></li>
+          <li><a href="data.html">Data</a></li>
+          <li><a href="regression.html">Regression Model</a></li>
           <li><a href="predicted.html">Predicted Traffic</a></li>
-          <a href="realtime.html">Live Traffic</a></li>
-          <li><a href="about.html">About the Dream Team</a></li>
+          <li><a href="realtime.html">Live Traffic</a></li>
+          <li><a href="results.html">Results and Discussion</a></li>
+          <li><a href="future.html">Future Work</a></li>
+          <li><a href="about.html">About Us</a></li>
       </ul>
     </div>
     </div>
