--- a/predicted.html
+++ b/predicted.html
@@ -37,41 +37,47 @@
       <ul class = "nav nav-list"
         <li class="nav-header">Navigate</li>
           <li><a href="home.html">Home</a></li>
-          <li class="active">
-          <a href="predicted.html">Predicted Traffic</a></li>
+          <li><a href="data.html">Data</a></li>
+          <li><a href="regression.html">Regression Model</a></li>
+          <li class="active"><a href="predicted.html">Predicted Traffic</a></li>
           <li><a href="realtime.html">Live Traffic</a></li>
-          <li><a href="about.html">About the Dream Team</a></li>
+          <li><a href="results.html">Results and Discussion</a></li>
+          <li><a href="future.html">Future Work</a></li>
+          <li><a href="about.html">About Us</a></li>
       </ul>
     </div>
     </div>
     <div class="span9">
       <!--Body content-->
           <h1>Gallery of Predicted Traffic Maps</h1>
-          <p class="lead">Users can use our command-line interface in terminal to see what our predicted traffic values are for different times of day, on weekends and weekdays. Below, we have a selection of samples from our predicted maps.</p>
-          <h4>Weekday: 6am</h4>
-          <img src="legendV2.gif">
-          <img src="predicted/6am.jpeg" class="img-polaroid">
+          <p class="lead">Users can use our command-line interface in terminal to see what our predicted traffic values are for different times of day, on weekends and weekdays. Below, we have a selection of samples from our <b>predicted</b> maps on the <b>left</b>, and <b>actual</b> observations on the <b>right</b>.</p>
+
           <h4>Weekday: 7am</h4>          
           <img src="legendV2.gif">
-          <img src="predicted/7am.jpeg" class="img-polaroid">
-          <h4>Weekday: 8am</h4>
+          <div class="row-fluid">
+             <div class="span6"><img src="predicted/7am.jpg" class="img-polaroid"></div>
+             <div class="span6"><img src="predicted/real_7am.jpg" class="img-polaroid"></div>
+          </div>
+          <h4>Weekday: 8am</h4>          
           <img src="legendV2.gif">
-          <img src="predicted/8am.jpeg" class="img-polaroid">
-          <h4>Weekday: 9am</h4>
+          <div class="row-fluid">
+             <div class="span6"><img src="predicted/8am.jpg" class="img-polaroid"></div>
+             <div class="span6"><img src="predicted/real_8am.jpg" class="img-polaroid"></div>
+          </div>
+          <h4>Weekday: 9am</h4>          
           <img src="legendV2.gif">
-          <img src="predicted/9am.jpeg" class="img-polaroid">
-          <h4>Weekday: 10am</h4>
+          <div class="row-fluid">
+             <div class="span6"><img src="predicted/9am.jpg" class="img-polaroid"></div>
+             <div class="span6"><img src="predicted/real_9am.jpg" class="img-polaroid"></div>
+          </div>
+          <h4>Weekday: 10am</h4>          
           <img src="legendV2.gif">
-          <img src="predicted/10am.jpeg" class="img-polaroid">
-          <h4>Weekday: 11am</h4>
-          <img src="legendV2.gif">
-          <img src="predicted/11am.jpeg" class="img-polaroid">
-          <h4>Weekday: 12pm</h4>
-          <img src="legendV2.gif">
-          <img src="predicted/12pm.jpeg" class="img-polaroid">
-          <h4>Weekday: 1pm</h4>
-          <img src="legendV2.gif">
-          <img src="predicted/1pm.jpeg" class="img-polaroid"> 
+          <div class="row-fluid">
+             <div class="span6"><img src="predicted/10am.jpg" class="img-polaroid"></div>
+             <div class="span6"><img src="predicted/real_10am.jpg" class="img-polaroid"></div>
+          </div>
+           
+         
           <script src="http://code.jquery.com/jquery-latest.js"></script>
           <script src="js/bootstrap.min.js"></script>
     </div>
