--- a/data.html
+++ b/data.html
@@ -36,21 +36,35 @@
       <div class="well sidebar-nav">
       <ul class = "nav nav-list"
         <li class="nav-header">Navigate</li>
-          <li class="active">
-          <a href="home.html">Home</a>
+          <li><a href="home.html">Home</a></li>
+          <li class="active"><a href="data.html">Data</a></li>
+          <li><a href="regression.html">Regression Model</a></li>
           <li><a href="predicted.html">Predicted Traffic</a></li>
-          <a href="realtime.html">Live Traffic</a></li>
-          <li><a href="about.html">About the Dream Team</a></li>
+          <li><a href="realtime.html">Live Traffic</a></li>
+          <li><a href="results.html">Results and Discussion</a></li>
+          <li><a href="future.html">Future Work</a></li>
+          <li><a href="about.html">About Us</a></li>
       </ul>
     </div>
     </div>
     <div class="span9">
-          <div class="hero-unit">
-            <h1>Machine Learning:<br>A Predictive Traffic Model</h1><!-- Real title: Big Data, Big MPImpin' -->
-            <p> We use parallel processing computational techniques to analyze the "big data" of 1 billion geo-referenced observations of traffic recorded by the thousands of traffic detectors in downtown Los Angeles over long time frames. Using the message passing interface (MPI) to distribute processing tasks, we've created an efficient and robust software package to model and predict the the traffic in Los Angeles for any given time period. With real-time traffic updates, the model continually "learns" and regenerates based on a real-time data stream. <br><br>
-Explore our site to find traffic in real time, or to see a prediction we've made.</p>
-            <p><FORM action="video.html"><INPUT type=submit value="Learn More"></FORM></p>
-          </div>
+      <!--Body content-->
+          <h1>About the Data</h1>
+          <p>
+Our raw data is available through the California Department of Transportation's <a href="http://pems.dot.ca.gov">Performance Measurement System (PeMS)</a>. Real-time data is available through an approved account, along with historical data. Our real-time update script continually polls the PeMS servers for its 5 minute real-time data to both update our predictive model along with visualization of real-time data through Google Maps.
+<br><br>
+Our goal is to build a predictive model where given a set of input parameters including Weekend or Weekday (two distinct patterns as shown in <a href="results.html">results</a>) and Time of Day, we output Occupancy, or the fraction of time a detector is triggered. In other words, this describes whether traffic is flowing or bumper-to-bumper.
+<br><br>
+The program utilizes a set of python scripts to pre-process the raw data and extract our data of interest. We chose to gather stationID's (unique markers), Time of Day, Weekday or Weekend, and Occupancy.
+<br><br>
+In order to build a predictive model for each station, we gather all the time and occupancy data <i>per detector</i> and perform a regression analysis to generate a predictive matrix (where each row corresponds to regression coefficients for each stationID). This step is parallel at the file distribution level, with Message Passing Interface to distribute the station files to CPUs for regression analysis. This could be further extended with CUDA to perform the individual regressions in parallel.
+<br><br>
+With the predictive matrix in hand, our script's input parameters generate a timestamp vector. Matrix-vector multiplication produces a result of StationID and Occupancy. A metatdata file available from PeMS allows for a relational join of stationID's to latitude and longitudes necessary for geolocation in <a href="http://www.google.com/drive/start/apps.html#fusiontables">Google Fusion Tables</a> for map visuals.
+<br><br>
+Below, we show the raw data for a unique detector over the course of a week. More in <a href="results.html">results</a> section.</p>
+          <h4>One Station over a Week:</h4>
+          <img src = "images/animate_graph.gif">           
+         
           <script src="http://code.jquery.com/jquery-latest.js"></script>
           <script src="js/bootstrap.min.js"></script>
     </div>
