--- a/predicted.html
+++ b/predicted.html
@@ -53,25 +53,25 @@
           <p class="lead">Users can use our command-line interface in terminal to see what our predicted traffic values are for different times of day, on weekends and weekdays. Below, we have a selection of samples from our <b>predicted</b> maps on the <b>left</b>, and <b>actual</b> observations on the <b>right</b>.</p>
 
           <h4>Weekday: 7am</h4>          
-          <img src="legendV2.gif">
+          <img src="images/legendV2.gif">
           <div class="row-fluid">
              <div class="span6"><img src="predicted/7am.jpg" class="img-polaroid"></div>
              <div class="span6"><img src="predicted/real_7am.jpg" class="img-polaroid"></div>
           </div>
           <h4>Weekday: 8am</h4>          
-          <img src="legendV2.gif">
+          <img src="images/legendV2.gif">
           <div class="row-fluid">
              <div class="span6"><img src="predicted/8am.jpg" class="img-polaroid"></div>
              <div class="span6"><img src="predicted/real_8am.jpg" class="img-polaroid"></div>
           </div>
           <h4>Weekday: 9am</h4>          
-          <img src="legendV2.gif">
+          <img src="images/legendV2.gif">
           <div class="row-fluid">
              <div class="span6"><img src="predicted/9am.jpg" class="img-polaroid"></div>
              <div class="span6"><img src="predicted/real_9am.jpg" class="img-polaroid"></div>
           </div>
           <h4>Weekday: 10am</h4>          
-          <img src="legendV2.gif">
+          <img src="images/legendV2.gif">
           <div class="row-fluid">
              <div class="span6"><img src="predicted/10am.jpg" class="img-polaroid"></div>
              <div class="span6"><img src="predicted/real_10am.jpg" class="img-polaroid"></div>
