--- a/realtime.html
+++ b/realtime.html
@@ -51,7 +51,7 @@
       <!--Body content-->
           <h1>Live Traffic Map
            <button class="btn btn-large btn-primary" type="button" onClick="window.location.reload()">Click to Refresh Map</button></h1>
-          <img src="legendV2.gif">
+          <img src="images/legendV2.gif">
           <iframe width="700" height="500" scrolling="no" frameborder="no" src="https://www.google.com/fusiontables/embedviz?viz=MAP&amp;q=select+col0+from+1IXVrPvlhB2NhwTrQk7oyu89RT3Fi_sn_IKFgNms&amp;h=false&amp;lat=34.23087056558538&amp;lng=-118.4945045&amp;z=9&amp;t=1&amp;l=col0"></iframe>
           <script src="http://code.jquery.com/jquery-latest.js"></script>
           <script src="js/bootstrap.min.js"></script>
