--- a/results.html
+++ b/results.html
@@ -52,38 +52,31 @@
       <!--Body content-->
           <h1>Results and Discussion</h1>
           <p>
-          <h4>Polynomial Regression</h4>
-To address the <b>nonlinearity</b>, <b>mean-differences</b>, and <b>heteroskdasticity</b> between
-different locations in our prediction model, we choose a <b>polynomial GLM regression</b>. We
-choose time of day to be the explanatory variable, and interact this with (1) location and (2)
-a <i>weekday</i> or <i>weekend</i> dummy. These choices give us the following model form:
+          <h4>Station Data over a Week</h4>
+          <div class="row-fluid">
+          <div class="span6"><img src="images/graphtraits.jpg" class="img-polaroid"></div>
+          <div class="span6">Key Data Insights:
+               <ul>
+               <li>Time seems to be a good predictor of daily and weekly traffic.
+               <li>The relationship between time and traffic is highly nonlinear & periodic in days and
+weeks.
+               <li>Weekend days have obviously different traffic patterns than weekdays.
+               <li>While stations appear to follow similar patterns over time, some experience much more traffic, more variance in traffic, or both compared to others.
+               </ul> </div></div>
 <br>
-<img src = "images/equation.jpg">
+<h4>Model Fitting: Observed Traffic vs Predicted Traffic</h4>
+Using 7th order
+polynomial GLM regression on time of day + all dummy interactions for weekday/weekend and
+location:<br>Leftmost plots are predicted traffic vs. all weekday traffic <br> Center plots are predicted traffic vs. all weekend traffic <br> Rightmost plots are predicted traffic vs. all weeks of traffic
+<img src="images/regressed_graph.jpg" class="img-polaroid"><br>
+After we have generated our regressions, we have verified the equation (red line) by plotting against the observed data. We see that the equation fits the overall shape of the observed traffic points. <br>Our script that downloads real-time data also appends new observations to the existing files that are used in regression analysis. ***BENEFIT OF THIS: ADAM WRITE HERE***
 <br>
-Where:
-<ul>
-<li>Traffic is normalized as the &#35; of cars per minute / road capacity per minute
-<li>
-&tau; is the hour of the day (0 &le; &tau; &ge; 24)
-<li>
-(Location i) is a dummy &isin; (0,1) that takes value 1 if the observation is for Location i.
-<li>
-WeekDay/Weekend is a dummy &isin; (0,1)
-</ul>
-As such, our prediction function has a number of terms equal to the number of
-polynomial terms we select (0-based including a constant) * the number of locations * 2
-(for our weekend/weekday dummy).
-<br>
-<br>
-<h4>Initial GLM Regression Algorithm Parallelization:</h4> 
-Following the analysis above, our regression model is over 60,000 terms long (i.e. we need to
-solve for 60,000+ regression coefficients). However, we can solve for each metaterm *(Location
-i)*(WeekDay) separately. In other words, we can solve each metaterm of the following form
-independently from others:
-<br>
-<p class="lead"> Traffic(Location<sub>i</sub>, WeekDAY=1) = (&Beta;<sub>0</sub> + &Beta;<sub>1</sub>&tau; + &Beta;<sub>2</sub>&tau;<sup>2</sup> + ... + &Beta;<sub>N</sub>&tau;<sup>N</sup>)&#42;(Location<sub>i</sub>)&#42;(WeekDAY)</p>
-Because all regressions of this type are independent from one another, they are embarrassingly parallel. <i>Our final traffic model is simply the sum of the outputs of each of roughly independent regresion</i>.      
-         
+<h4>Reflections</h4>
+***WRITE THIS PART -- LESSONS LEARNED FROM PROJECT, WHAT WAS COOL, WHAT WAS NOT---
+This project was a challenging, yet rewarding exercise in applying the parallel computational techniques we have learned in order to analyze "big data".
+
+Frustrating aspects: this is an immature field, and so not well documented and required much thought and dedication (and a fair bit of luck). Yet this is also why it is exciting --- leading edge techniques, this stuff hasn't been done before for social science, we have innovated new tools, and hope to expand the field.
+       
           <script src="http://code.jquery.com/jquery-latest.js"></script>
           <script src="js/bootstrap.min.js"></script>
     </div>
