all but fixed images

--- a/data.html
+++ b/data.html
@@ -63,7 +63,7 @@ With the predictive matrix in hand, our script's input parameters generate a tim
 <br><br>
 Below, we show the raw data for a unique detector over the course of a week. More in <a href="results.html">results</a> section.</p>
           <h4>One Station over a Week:</h4>
-          <img src = "images/animate_graph.gif">           
+          <img src = "images/animate_graph.gif" class="img-polaroid">           
          
           <script src="http://code.jquery.com/jquery-latest.js"></script>
           <script src="js/bootstrap.min.js"></script>
