--- a/home.html
+++ b/home.html
@@ -51,8 +51,9 @@
           <div class="hero-unit">
             <h1>Machine Learning:<br>A Predictive Traffic Model</h1><!-- Real title: Big Data, Big MPImpin' -->
             <p> We use parallel processing computational techniques to analyze the "big data" of 1 billion geo-referenced observations of traffic recorded by the thousands of traffic detectors in downtown Los Angeles over long time frames. Using the message passing interface (MPI) to distribute processing tasks, we've created an efficient and robust software package to model and predict the the traffic in Los Angeles for any given time period. With real-time traffic updates, the model continually "learns" and regenerates based on a real-time data stream. <br><br>
-Explore our site to find traffic in real time, or to see a prediction we've made.</p>
-            <p><FORM action="video.html"><INPUT type=submit value="Learn More"></FORM></p>
+Explore our site to find traffic in real time, or to see a prediction we've made. <br>Learn more about our project through the video below.</p>
+            <!-- <p><FORM action="video.html"><INPUT type=submit value="Learn More"></FORM></p> -->
+            <video src="CS205_movie_medium.webm" controls> Your browser does not support the embedded video element. </video>
           </div>
           <script src="http://code.jquery.com/jquery-latest.js"></script>
           <script src="js/bootstrap.min.js"></script>
