--- a/results.html
+++ b/results.html
@@ -69,13 +69,10 @@ Using 7th order
 polynomial GLM regression on time of day + all dummy interactions for weekday/weekend and
 location:<br>Leftmost plots are predicted traffic vs. all weekday traffic <br> Center plots are predicted traffic vs. all weekend traffic <br> Rightmost plots are predicted traffic vs. all weeks of traffic
 <img src="images/regressed_graph.jpg" class="img-polaroid"><br>
-After we have generated our regressions, we have verified the equation (red line) by plotting against the observed data. We see that the equation fits the overall shape of the observed traffic points. <br>Our script that downloads real-time data also appends new observations to the existing files that are used in regression analysis. ***BENEFIT OF THIS: ADAM WRITE HERE***
+After we have generated our regressions, we have verified the equation (red line) by plotting against the observed data. We see that the equation fits the overall shape of the observed traffic points. <br>Our script that downloads real-time data also appends new observations to the existing files that are used in regression analysis. In this way, we continually update our regression.
 <br>
 <h4>Reflections</h4>
-***WRITE THIS PART -- LESSONS LEARNED FROM PROJECT, WHAT WAS COOL, WHAT WAS NOT---
-This project was a challenging, yet rewarding exercise in applying the parallel computational techniques we have learned in order to analyze "big data".
-
-Frustrating aspects: this is an immature field, and so not well documented and required much thought and dedication (and a fair bit of luck). Yet this is also why it is exciting --- leading edge techniques, this stuff hasn't been done before for social science, we have innovated new tools, and hope to expand the field.
+This project was a challenging, yet rewarding exercise in applying the parallel computational techniques we have learned in order to analyze "big data". As parallel computation is an immature field, at times it was frustrating to work with poor documentation and limited examples. However, this is also the reason it is exciting. Mainstream social science has not yet utilized parallel computational techniques. We hope to innovate new tools and expand the breadth of techniques for the field.
        
           <script src="http://code.jquery.com/jquery-latest.js"></script>
           <script src="js/bootstrap.min.js"></script>
