--- a/results.html
+++ b/results.html
@@ -71,6 +71,8 @@ location:<br>Leftmost plots are predicted traffic vs. all weekday traffic <br> C
 <img src="images/regressed_graph.jpg" class="img-polaroid"><br>
 After we have generated our regressions, we have verified the equation (red line) by plotting against the observed data. We see that the equation fits the overall shape of the observed traffic points. <br>Our script that downloads real-time data also appends new observations to the existing files that are used in regression analysis. In this way, we continually update our regression.
 <br>
+We use a model like those shown above at each location on the map to predict traffic. To see this in action, check out <a href="prediction.html">Predicted Traffic</a>.
+<br>
 <h4>Reflections</h4>
 This project was a challenging, yet rewarding exercise in applying the parallel computational techniques we have learned in order to analyze "big data". As parallel computation is an immature field, at times it was frustrating to work with poor documentation and limited examples. However, this is also the reason it is exciting. Mainstream social science has not yet utilized parallel computational techniques. We hope to innovate new tools and expand the breadth of techniques for the field.
        
